@@ -317,6 +317,12 @@ apr_status_t apr_socket_connect(apr_socket_t *sock, apr_sockaddr_t *sa)
     return APR_SUCCESS;
 }
 
+apr_status_t apr_socket_type_get(apr_socket_t *sock, int *type)
+{
+    *type = sock->type;
+    return APR_SUCCESS;
+}
+
 apr_status_t apr_socket_data_get(void **data, const char *key, apr_socket_t *sock)
 {
     sock_userdata_t *cur = sock->userdata;
